--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -285,28 +285,21 @@
 
 .other-controls {
     justify-content: flex-end;
-    gap: 10px;
-    padding: 10px;
+    gap: 1rem;
+    font-size: 18px;
     color: var(--white);
 }
 
 .other-controls .volume {
     display: flex;
     align-items: center;
-    gap: 10px;
+    justify-content: space-between;
+    gap: 1rem;
+    margin-right: 1rem;
 }
 
-.other-controls .progress-bar {
-    width: 100px;
+.other-controls .volume .volume-bar {
+    width: 100%;
     height: 10px;
-    border-radius: 5px;
-    background-color: var(--grey);
-}
-
-.other-controls .progress-bar .progress {
-    width: 80%;
-    height: 10px;
-    max-width: 100%;
-    border-radius: 5px;
-    background-color: var(--white);
+    margin-bottom: 0.5rem;
 }
