--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -302,6 +302,13 @@
     margin-right: 1rem;
 }
 
+.other-controls *{
+    background-color: transparent;
+    border: none;
+    color: var(--white);
+    font-size: 18px;
+}
+
 .other-controls .volume .volume-bar {
     width: 100%;
     height: 10px;
