--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -8,6 +8,10 @@
     --main-body-bg: rgba(0, 39, 96, 0.55);
 }
 
+input *{
+    outline: none;
+}
+
 /* Nav Bar Styles */
 .navbar {
     display: flex;
