--- a/src/pages/albumPage.css
+++ b/src/pages/albumPage.css
@@ -193,6 +193,11 @@
     font-size: 10px;
 }
 
+.liked{
+    color: rgb(255, 0, 0);
+    font-weight: 900;
+} 
+
 /* Player Section Styles*/
 .player {
     display: flex;
