--- a/src/pages/LikedSongs.css
+++ b/src/pages/LikedSongs.css
@@ -1,3 +1,18 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #002760;
+    background-image: url(../assets/home/bg-graphic.png);
+    background-size: cover;
+    width: 100vw;
+    height: 100vw;
+    overflow: hidden;
+}
+
 :root {
     --grey: #605E72;
     --shadow: rgb(24, 24, 24);
@@ -26,110 +41,74 @@
     box-shadow: 0 0 50px var(--shadow);
 }
 
-/* Search Bar Styles */
-.searchbar {
-    display: flex;
-    align-items: center;
-    position: relative;
-    width: 725px;
-    height: 52px;
-    border-radius: 25px;
-    background-color: var(--grey);
-    box-shadow: 0 0 20px var(--shadow);
-}
-
-#search-icon {
-    margin-left: 10px;
-}
-
-#line-separator {
-    width: 35px;
-    margin-left: 35px;
-    position: absolute;
-    transform: rotate(90deg);
-    border: 1px solid var(--white);
-}
-
-#search-input {
-    margin-left: 25px;
-    border: none;
-    font-size: larger;
-    color: var(--search-text);
-    background-color: var(--grey);
-    width: 80%;
-}
-
-#search-input:focus {
-    outline: none;
-    color: var(--search-text);
-    background-color: var(--grey);
-}
-
-#search-input:webkit-autofill {
-    color: var(--search-text) !important;
-    background-color: var(--grey) !important;
-}
-
-#search-input::placeholder {
-    color: var(--search-text);
-}
+/* Main Section */
 
 .row1{
     display:flex;
     flex-direction: row;
 }
 
-/* Expanded Profile Styles */
-.expanded-profile {
+.likedsongsimage{
+    margin-left: 50px;
+    width: 500px;
+    height: 700px;
+
+}
+
+.likedsongs {
+    margin-top:10px;
+    margin-left: 50px;
+    width: 60%;
+    max-width: 1200px;
+    background: rgba(30, 96, 145, 0.75);
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    height: 716px;
+}
+
+.song-list {
     display: flex;
     flex-direction: column;
-    width: 40vw;
-    height: 40vh;
-    margin: auto;
-    margin-left: 230px;
+    gap: 10px;
+}
+
+.song-item {
+    height: 58px;
+    display: flex;
     align-items: center;
-    justify-content: center;
-    background-color: #022c6bd1;
-    position: relative;
-    top: 150px;
-    border-radius: 40px;
-    height: 100%;
+    justify-content: space-between;
+    padding: 15px;
+    background: #74C2E1;
+    border-radius: 10px;
+    color: #000;
+    font-weight: 600;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.profile-pic {
-    position: fixed;
-    width: 400px;
-    height: 400px;
-    top: 100px;
+.song-number, .song-title, .song-duration {
+    margin: 0 10px;
 }
 
-.details-container {
-    width: 100%;
+.song-title {
+    flex: 1;
+    text-align: left;
+}
+
+.song-duration {
+    width: 50px;
     text-align: center;
-    color: var(--white);
-    letter-spacing: 1px;
-    position: relative;
-    top: 0px;
-    font-size: xx-large;
 }
 
-.username, .usermail {
+.likebtn{
+    color: rgb(0, 0, 0);
     font-weight: 100;
-    padding: 8px;
+    cursor: pointer;
 }
 
-.likedsongs{
-    margin-right: 230px;
-    width: 500px;
-}
-
-.likedsongs img {
-    height: 100%;
-}
-
-.likedsongs :hover{
-    filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5));
-
+.liked {
+    color: rgb(219, 93, 93) !important; 
+    font-weight: 900;
 }
 
 
@@ -225,7 +204,7 @@
     color: var(--primary-text);
 }
 
-.playbar .progress-bar .seekBar {
+.playbar .progress-bar .slider {
     width: 500px;
     height: 10px;
     max-width: 100%;
@@ -269,13 +248,6 @@
     margin-right: 1rem;
 }
 
-.other-controls *{
-    background-color: transparent;
-    border: none;
-    color: var(--white);
-    font-size: 18px;
-}
-
 .other-controls .volume .volume-bar {
     width: 100%;
     height: 10px;
@@ -300,4 +272,4 @@
 
 .playlist .songTile {
     color: var(--primary-text);
-}   
+}
