--- a/src/pages/LikedSongs.css
+++ b/src/pages/LikedSongs.css
@@ -204,7 +204,7 @@ body {
     color: var(--primary-text);
 }
 
-.playbar .progress-bar .slider {
+.playbar .progress-bar .seekBar {
     width: 500px;
     height: 10px;
     max-width: 100%;
@@ -246,6 +246,13 @@ body {
     justify-content: space-between;
     gap: 1rem;
     margin-right: 1rem;
+}
+
+.other-controls *{
+    background-color: transparent;
+    border: none;
+    color: var(--white);
+    font-size: 18px;
 }
 
 .other-controls .volume .volume-bar {
